Project 2 HTML files

--- a/Project1/index.html
+++ b/Project1/index.html
@@ -1,8 +1,8 @@
 <!doctype html>
 <!-- Sabra May -->
 <!-- VFW 1305 -->
-<!-- Project 1-->
-<!-- May 9, 2013-->
+<!-- Project 2-->
+<!-- May 16, 2013-->
 <html>
 <head>
 <meta charset="utf-8">
@@ -13,6 +13,7 @@
 <meta name="viewport" content="target-densitydpi=device-dpi" />
 <meta name="HandheldFriendly" content="true" />
 <meta name="MobileOptimized" content="320" />
+<link type="text/css" href="css/style.css" rel="stylesheet">
 <title> Store It!</title>
 </head>
 
@@ -21,10 +22,15 @@
 	<h1> Store It! </h1>
 </header>
 
-	<p> I would like this app to be able to track what is in my pantry so that I can build up my food storage.<br>
+	<p> A simple app to track what is in my pantry so that I can build up my food storage.<br>
 	</p>
-		
-	<a href="additem.html" target="_blank">Add item</a>
 	
-</body>
+	<!-- <div id="links">
+		<a id="addbutton" href="additem.html">Add Item</a>	
+	</div>	-->
+	<form method="link" href="additem.html">
+	<input class="addbutton"  type="button" value="Add Item">
+	
+	<script src"js/main.js" type="text/javascript"></script>
+</body>	
 </html>	
