--- a/Project1/additem.html
+++ b/Project1/additem.html
@@ -1,8 +1,8 @@
 <!doctype html>
 <!-- Sabra May -->
 <!-- VFW 1305 -->
-<!-- Project 1-->
-<!-- May 9, 2013-->
+<!-- Project 2-->
+<!-- May 16, 2013-->
 <html>
 <head>
 <meta charset="utf-8">
@@ -13,7 +13,10 @@
 <meta name="viewport" content="target-densitydpi=device-dpi" />
 <meta name="HandheldFriendly" content="true" />
 <meta name="MobileOptimized" content="320" />
+<link rel="stylesheet" href="css/style.css" type="text/css" />
+
 <title>Store It!</title>
+
 </head>
 
 <body>
@@ -50,23 +53,27 @@
 				<input name="amount" type="range"  min="0" max="50" id="amount"
 			</li>
 			<br>
-			<li><input type="radio" id="liquid" /><label for="leader"> Liquid</label>
+			<input name="liquid" type="radio" value="Liquid">Liquid</li>
 			</li>
 	
 			<li><label for="notes">Item Notes:</label><br />
 			</li>
 			<textarea> </textarea>
 			<br>
-			<input type="submit" value="Add Item" />
+			<!-- <input id="saveButton" type="button" value="Add Item" /> -->
+			<input class="saveButton" type="button" value="Add Item">
 			
 		</fieldset>
 		</form>
 		
-		<p>
-		<a href="#">Clear Stored Data</a>&nbsp;&nbsp;&nbsp;<a href="#">Display Data</a>
-		</p>
+		<div id="links">
+		<a id="clearStorage" href="#">Clear Stored Data</a>
+		<a id="displayData" href="#">Display Data</a>
+		</div>
 		
-		
+	<script src"js/main.js" type="text/javascript"></script>		
 </body>
+
+	
 </html>					
 		
