images added in main.js

--- a/May_Sabra_Project4/additem.html
+++ b/May_Sabra_Project4/additem.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <!-- Sabra May-->
 <!-- VFW 1307 -->
-<!--July 25, 2013 -->
+<!--Aug 1, 2013 -->
 <html>
 <head>
 	<meta charset="utf-8"/>
@@ -39,8 +39,7 @@
 				<label for="date">Today's Date</label>
 				<input name="idea" type="text" value="" id="date"/>
 				</li>
-				<li id="select">
-				<label for="select">Choose a Category</label>
+				<li id="select"><label for="select">Choose a Category</label>
 				</li>
 				<li>Choose a Device</li>
 				<li><input type="checkbox" value="Yes" name="device" id="iPhone"/><label for="iPhone">iPhone</label></li>
