--- a/May_Sabra_Project4/additem.html
+++ b/May_Sabra_Project4/additem.html
@@ -39,7 +39,7 @@
 				<label for="date">Today's Date</label>
 				<input name="idea" type="text" value="" id="date"/>
 				</li>
-				<li id="select"><label for="select">Choose a Category</label>
+				<li id="selectList"><label for="select">Choose a Category</label>
 				</li>
 				<li>Choose a Device</li>
 				<li><input type="checkbox" value="Yes" name="device" id="iPhone"/><label for="iPhone">iPhone</label></li>
